--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,17 +1,17 @@
 # make a soft link in /etc/nginx/sites-enabled to etc/nginx.conf
 
-upstream m2m_main {
-    server 127.0.0.1:8090 max_fails=3 fail_timeout=30s;
+upstream m2m_staging {
+    server 127.0.0.1:6543 max_fails=3 fail_timeout=30s;
 }
 
 server {
     listen *:80;
-    server_name m2m.globalactionplan.com;
-    access_log  /var/log/nginx/m2m-main-access.log;
-    error_log  /var/log/nginx/m2m-main-error.log;
+    server_name m2m_staging.globalactionplan.com;
+    access_log  /var/log/nginx/m2m-staging-main-access.log;
+    error_log  /var/log/nginx/m2m-staging-main-error.log;
 
     location / {
-        proxy_pass http://m2m_main;
+        proxy_pass http://m2m_staging;
 
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
