--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -6,7 +6,7 @@ upstream m2m_staging {
 
 server {
     listen *:80;
-    server_name m2m_staging.globalactionplan.com;
+    server_name m2m-staging.globalactionplan.com;
     access_log  /var/log/nginx/m2m-staging-main-access.log;
     error_log  /var/log/nginx/m2m-staging-main-error.log;
 
