--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
-parts = 
-    MadeToMeasure
+extends = ${buildout:directory}/src/MadeToMeasure/buildout.cfg
+parts +=
     crontab-reboot
     crontab-pack
 
@@ -29,14 +29,6 @@ sources = sources
 auto-checkout = *
 
 
-[MadeToMeasure]
-recipe = zc.recipe.egg
-dependent-scripts = true
-unzip = true
-eggs =
-    ${buildout:eggs}
-interpreter = py
-
 
 [crontab-reboot]
 recipe = z3c.recipe.usercrontab
@@ -54,7 +46,3 @@ command = ${buildout:directory}/bin/zeopack -u ${buildout:directory}/var/ZEO.soc
 
 [sources]
 MadeToMeasure = git git://github.com/GlobalActionPlan/MadeToMeasure.git 
-
-
-[versions]
-deform = 0.9.5
