Path spec error

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,6 @@
 [buildout]
-extends = ${buildout:directory}/src/MadeToMeasure/buildout.cfg
+extends = src/MadeToMeasure/buildout.cfg
+
 parts +=
     crontab-reboot
     crontab-pack
